# pyart

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  1024px.css  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  INSTALL.TXT  INSTALL.html  INSTALL.rst  LICENSE.txt  MANIFEST.in  README  README.TXT  README.rst  __init__.py  _update_docs.sh  appveyor.yml  blog.html  changelog.html  codecov.yml  contributors_guide.html  contributors_guide.rst  environment.yml  genindex.html  index.html  notebook-gallery.html  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements.txt  search.html  searchindex.js  setting_up_an_environment.html  setup.cfg  (+4 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: antivirus.yml  build_docs.yml  ci.yml  codeql.yml  linting.yml  pypi-release.yml  wheels.yml
API/: index.html
INSTALL/: index.html
_downloads/00c7afc801742d63d4324ace840ddd49/: plot_rhi_data_overlay.ipynb
_downloads/04419400e74f17e2e96430954defc94f/: plot_cross_section.ipynb
_downloads/09689a25ae138fef10f55e864fb0c76a/: compare_two_radars_gatemapper.ipynb
_downloads/0ca9482de0ac437378b85f5b8939c6b8/: read_older_nexrad_data_aws.ipynb
_downloads/0f00484d9192551823a2a1ca2c332522/: plot_ppi_with_rings.ipynb
_downloads/0f788fd8c67dc1c0c6ffd88dfeae245f/: plot_nexrad_reflectivity.py
_downloads/1033cbceb9e9e71c298d3f16523a5c71/: plot_rhi_data_overlay.py
_downloads/104f550be6404a276421be922bbaee44/: plot_map_one_radar_to_grid.py
_downloads/14faf13685ef2351d6085ae8da29d2bb/: plot_xsect.ipynb
_downloads/174af3a2cb65520161de2ccc5d9f2f00/: plot_nexrad_multiple_moments.py
_downloads/17c88c4b4a3ef3c9e7f7aacebafc09d4/: plot_read_cfradial2.ipynb
_downloads/182481e6c5738d915b8ec732baf8739c/: plot_zdr_check.ipynb
_modules/: index.html
_sources/: blog.md.txt  changelog.md.txt  index.rst.txt  sg_execution_times.rst.txt
_static/: copybutton.css  copybutton.js  doc_shared.js  documentation_options.js  mystnb.1ae1adf31bcec4f5a66e594d147bbc00e33ac08d67b8f5697420a1436a24298a.css  pyart-theme.css
blog/: 2022.html  2023.html  2024.html  archive.html  atom.xml  author.html  drafts.html  tag.html
blog_posts/: blog-post-template.html
ci/: environment.yml  environment_docs.yml
conda_recipe/: build.sh  meta.yaml
continuous_integration/: build_docs.sh  environment-2.7.yml  environment-3.4.yml  environment-3.5.yml  environment-3.6.yml  environment-3.7.yml  environment-3.8.yml  environment-3.9.yml  environment-ci.yml  install.sh
contributors_guide/: index.html
correct/: __init__.py  attenuation.py  cband.py  dealias.py  phase_proc.py
dev/: .buildinfo  CONTRIBUTING.html  INSTALL.html  ci_setup.html  genindex.html  how_to_release.html  index.html  io.html  np-modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js  setting_up_an_environment.html
doc/: HOWTO_RELEASE.rst  Makefile  environment.yml  make.bat  rebuild_docs.sh  rebuild_examples.sh  rebuild_full_docs.sh  rebuild_guides.sh
examples/: README.txt  arm_csapr_sgp.params  arm_xsapr_se.params  cwnotes  dynamics_plot.py  index.html  plot_cf.py  process_and_save.py  process_and_save_csapr_params.py  process_and_save_xsapr_params.py  sg_execution_times.html  two_panel_plot.py
genindex/: index.html
graph/: __init__.py  plot_cmac.py  plot_mdv.py  plot_rhi.py  plot_rhi_multi.py  plot_sur.py  radar_display.py  rayplot.py  slicer.py  vanilla_ppi.py
guides/: CI_SETUP.rst  HOWTO_RELEASE.rst  ci_setup.rst  contributors_guide.rst  how_to_release.rst  pyart_cheatsheet.tex  setting_up_an_environment.rst
io/: __init__.py  grid.py  nc_utils.py  py4dd.py  py_mdv.py  radar.py  rsl_utils.py
io/src/patch/: FourDD.c  FourDD.h  FourDD_lassen.c  FourDD_old.c  Makefile.am  firstGuess.c  window.c
map/: __init__.py  ballsy.py
notebooks/: basic_ingest_using_test_radar_object.html  basic_ingest_using_test_radar_object.ipynb  changing_fields_and_saving.html  changing_fields_and_saving.ipynb  dealiasing_velocity.html  differential_phase_proceesing_using_LP_methods.html  differential_phase_proceesing_using_LP_methods.ipynb  mapping_data_to_a_cartesian_grid.html  masking_data_with_gatefilters.html  the_pyart_radar_object_and_indexing.html  vad_example.ipynb
py-modindex/: index.html
pyart/: __init__.py  _debug_info.py  _version.py  config.py  default_config.py  exceptions.py  lazydict.py  setup.py  sounding.py  wrapper
retrieve/: qpe.py
samples/: arm_csapr_sgp.params  arm_xsapr_se.params  dynamics_plot.py  mdv_to_cfradial.py  plot_cf.py  process_and_save.py  process_and_save_csapr_CMAC.py  process_and_save_csapr_params.py  process_and_save_xsapr.py  process_and_save_xsapr_params.py  six_panel_rain_plot.py  two_panel_plot.py
scripts/: anytocfradial  check_cfradial  check_cfradial.py  convert_legacy_grid  radar_info  radar_plot  sinarame_to_cfradial.py
search/: index.html
setting_up_an_environment/: index.html
system_tests/: test_dealias.py  test_grid.py  test_map_to_grid_fast.py  test_map_to_grid_slow.py  test_mdv.py  test_netcdf.py  test_plot_netcdf.py  test_py_mdv.py
tests/: custom_config.py  test_config.py  test_debug_info.py
userguide/: INSTALL.html  contributors_guide.html  index.html  overview.html  pyart_2_0.html  setting_up_an_environment.html
util/: __init__.py  datetime_utils.py  met.py  sigmath.py
v1_10/: index.html  py-modindex.html  search.html
v1_11/: INSTALL.html  contributors_guide.html  search.html  setting_up_an_environment.html
v1_4/: np-modindex.html  objects.inv  py-modindex.html
v1_5/: index.html  objects.inv  py-modindex.html  search.html
v1_6/: index.html  objects.inv  search.html
v1_7/: py-modindex.html
v1_8/: index.html  objects.inv  py-modindex.html  search.html
v1_9/: genindex.html  objects.inv  searchindex.js
(+1711 files in other folders)
